[package]
name = "neuroorlov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11", features = ["builder", "gateway", "model", "cache", "client","http", "utils", "rustls_backend"], default-features = false}
rand = "0.8"
tokio = { version = "1.21", features = ["rt-multi-thread"] }
parking_lot = "0.12"